SERVER-79033 Image collection invalidation for missing namespace should not upsert on retry due to write conflict

(cherry picked from commit 18dd9b734865fc92c8a3da3b3d60a3c02212f0cc)